[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/tiles/button_tl.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/button_bl.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/button_br.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/button_r.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/button_b.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/button_l.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/button_tr.png" type="Texture" id=7]
[ext_resource path="res://assets/tiles/button_t.png" type="Texture" id=8]
[ext_resource path="res://menu/ButtonLevel.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/button_click.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="ButtonLevel" type="StaticBody2D"]
modulate = Color( 0.764706, 0.721569, 0.682353, 1 )
input_pickable = true
script = ExtResource( 9 )

[node name="Parts" type="Node2D" parent="."]

[node name="ButtonBl" type="Sprite" parent="Parts"]
position = Vector2( 8, 40 )
texture = ExtResource( 2 )

[node name="ButtonB" type="Sprite" parent="Parts"]
position = Vector2( 24, 40 )
texture = ExtResource( 5 )

[node name="ButtonBr" type="Sprite" parent="Parts"]
position = Vector2( 40, 40 )
texture = ExtResource( 3 )

[node name="ButtonR" type="Sprite" parent="Parts"]
position = Vector2( 40, 24 )
texture = ExtResource( 4 )

[node name="ButtonTr" type="Sprite" parent="Parts"]
position = Vector2( 40, 8 )
texture = ExtResource( 7 )

[node name="ButtonT" type="Sprite" parent="Parts"]
position = Vector2( 24, 8 )
texture = ExtResource( 8 )

[node name="ButtonTl" type="Sprite" parent="Parts"]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="ButtonL" type="Sprite" parent="Parts"]
position = Vector2( 8, 24 )
texture = ExtResource( 6 )

[node name="Number" type="Sprite" parent="."]
position = Vector2( 24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 1 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
